--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "ioredis": "^5.2.5",
     "next": "13.1.2",
     "openai": "^3.1.0",
+    "pusher": "^5.1.2",
+    "pusher-js": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
